--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -5,6 +5,12 @@
     /* padding: 20px; */
     /* border: 1px solid #999; */
     box-shadow: 0 5px 5px -5px #000000;
+
+    overflow: hidden;
+    background-color: #665c5c;
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
 
 img{
